--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,1 +1,9 @@
-{}
+{
+  "pdfExportSettings": {
+    "includeName": false,
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "1",
+    "downscalePercent": 100
+  }
+}
